apps/docs-app/src/pages/index.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
}

@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

/**
  * 1. Increase specificity to override the Infima Outline Button style.
  */
.buttonOutline.buttonOutline.buttonOutline.buttonOutline:not(:hover) /* [1] */ {
  color: var(--ifm-hero-text-color);
}

